fix merge with stage and update data